# pypi_info

./: out.txt  pypi_info.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
tests/: test_requirement_parser.py
